--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -40,7 +40,7 @@
       margin: 0;
     }
     #logCheckboxContainer {
-      margin: 0.5em;
+      margin: 0.5em 0em;
     }
     #logCheckboxLabel {
       display: inline-table;
