--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -58,13 +58,16 @@
         opacity: .6;
         cursor: pointer;
       }
+      #toolbar paper-tab.core-selected {
+        opacity: 1;
+      }
       #btnSettings {
         opacity: 0.6;
         -webkit-transition: all 0.23s !important;
         -moz-transition: all 0.23s !important;
         transition: all 0.23s !important;
       }
-      #toolbar paper-tab.core-selected, #btnSettings:hover {
+      #btnSettings:hover {
         opacity: 1;
         cursor: pointer;
       }
