--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../lib/core-signals/core-signals.html">
 <link rel="import" href="../lib/core-toolbar/core-toolbar.html">
 <link rel="import" href="../lib/core-icon-button/core-icon-button.html">
+<link rel='import' href='../lib/paper-dialog/paper-action-dialog.html'>
 <link rel="import" href="../lib/paper-tabs/paper-tabs.html">
 <link rel="import" href='splash.html'>
 <link rel="import" href='roster.html'>
@@ -12,7 +13,7 @@
 <link rel='import' href='feedback.html'>
 <link rel='import' href='browser-elements.html'>
 
-<polymer-element name='uproxy-root' attributes='model' on-update-view='{{ updateView }}'>
+<polymer-element name='uproxy-root' attributes='model' on-update-view='{{ updateView }}' on-open-dialog='{{ openDialog }}'>
 
   <template>
     <style>
@@ -138,6 +139,15 @@
       uproxy-tip.error::shadow #arrow {
         border-bottom-color: firebrick;
       }
+      paper-button[class=dialogButton] {
+        background-color: #009688; /* teal */
+        color: white;
+        margin-bottom: 3px;
+      }
+      #dialog {
+        top: 150px;
+        left: 0px;
+      }
     </style>
 
     <div id='browserElementContainer' hidden?='{{UI.View.BROWSER_ERROR !== ui.view}}'></div>
@@ -222,6 +232,18 @@
     <!-- Dark mask displayed on top of roster when settings is visible -->
     <div id='darkMask' hidden?='{{UI.View.SETTINGS!=ui.view}}'
         on-tap='{{ rosterView }}'></div>
+
+    <!-- Dialog is opened when .toggle() is called in openDialog -->
+    <!-- Without layered="false", styling needs to be prefixed with 'html /deep/' in order to have effect on the dialog contents.'  -->
+    <paper-action-dialog backdrop layered="false" heading="{{ dialog.heading }}" id="dialog">
+      <p>{{ dialog.message }}</p>
+      <paper-button class='dialogButton' affirmative
+        on-tap='{{ affirmativeButtonClick }}'
+        hidden?='{{ dialog.affirmative.text == "" }}'>{{ dialog.affirmative.text }}</paper-button>
+      <paper-button class='dialogButton' dismissive
+        on-tap='{{ dismissiveButtonClick }}'
+        hidden?='{{ dialog.dismissive.text == "" }}'>{{ dialog.dismissive.text }}</paper-button>
+    </paper-action-dialog>
 
   </template>
 
