change firefox openFaq to openTab

--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -173,8 +173,8 @@
 
       <p id='moreInfo'>
         Your feedback and email address will be sent to uProxy.org. Your logs and email may include personally identifiable information.
-        <uproxy-faq-link>
-          <core-icon icon="help" anchor='feedbackLogs'></core-icon>
+        <uproxy-faq-link anchor='feedbackLogs'>
+          <core-icon icon="help"></core-icon>
         </uproxy-faq-link>
       </p>
 
