--- a/src/generic_ui/polymer/bubble.html
+++ b/src/generic_ui/polymer/bubble.html
@@ -2,26 +2,26 @@
 <link rel='import' href='../lib/paper-button/paper-button.html'>
 
 <!--
-uproxy-tip will appear immediately below the previous element in the DOM.
+uproxy-bubble will appear immediately below the previous element in the DOM.
 
 It will have both an X button in the top right as well as a done button in the
 bottom.  If either of these buttons are clicked, the element will be removed
 from the DOM and the "closed" event will be fired.  Listen to it by adding
-an "on-closed" attribute to the uproxy-tip element.
+an "on-closed" attribute to the uproxy-bubble element.
 
 To change the color of the box:
-uproxy-tip::shadow #box {
+uproxy-bubble::shadow #box {
   background: red;
 }
-uproxy-tip::shadow #arrow {
+uproxy-bubble::shadow #arrow {
   border-bottom-color: red;
 }
-uproxy-tip::shadow #done {
+uproxy-bubble::shadow #done {
   background: (some off-shade);
 }
 -->
 
-<polymer-element name='uproxy-tip'>
+<polymer-element name='uproxy-bubble'>
   <template>
     <style>
     :host {
@@ -85,5 +85,5 @@ uproxy-tip::shadow #done {
 
   </template>
 
-  <script src='tip.js'></script>
+  <script src='bubble.js'></script>
 </polymer-element>
