--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -9,7 +9,7 @@
 <link rel="import" href='settings.html'>
 <link rel="import" href='confirm.html'>
 <link rel='import' href='copypaste.html'>
-<link rel='import' href='tip.html'>
+<link rel='import' href='bubble.html'>
 <link rel='import' href='feedback.html'>
 <link rel='import' href='browser-elements.html'>
 
@@ -126,17 +126,17 @@
         width: 19px;
         height: 19px;
       }
-      uproxy-tip {
+      uproxy-bubble {
         z-index: 1;
         font-size: 13px; /* reset to normal, core-toolbar interferes with font sizes */
       }
-      uproxy-tip.error {
+      uproxy-bubble.error {
         opacity: 1;
       }
-      uproxy-tip.error::shadow #box {
+      uproxy-bubble.error::shadow #box {
         background: firebrick;
       }
-      uproxy-tip.error::shadow #arrow {
+      uproxy-bubble.error::shadow #arrow {
         border-bottom-color: firebrick;
       }
       paper-button[class=dialogButton] {
@@ -166,7 +166,7 @@
 
         <core-icon id='btnSettings' icon="menu" on-tap="{{ settingsView }}"></core-icon>
 
-        <uproxy-tip class='error' hidden?='{{ !ui.copyPasteUrlError }}' on-closed='{{ dismissCopyPasteError }}'>
+        <uproxy-bubble class='error' hidden?='{{ !ui.copyPasteUrlError }}' on-closed='{{ dismissCopyPasteError }}'>
           <h3>Cannot open manual connection</h3>
           <p>
             It is not currently possible to open a manual connection at the
@@ -174,17 +174,17 @@
             manual connection, please log out through the settings menu and
             re-paste the link.
           </p>
-        </uproxy-tip>
+        </uproxy-bubble>
 
         <div id='title' flex>uProxy</div>
         <core-icon-button src='../icons/sharing-enabled-toolbar.png'
           hidden?='{{model.contacts.shareAccessContacts.onlineTrustedUproxy.length==0 && model.contacts.shareAccessContacts.offlineTrustedUproxy.length==0}}'
           on-tap='{{ setShareMode }}'></core-icon-button>
 
-        <uproxy-tip on-closed='{{ closedSharing }}' hidden?='{{ (model.contacts.shareAccessContacts.onlineTrustedUproxy.length==0 && model.contacts.shareAccessContacts.offlineTrustedUproxy.length==0) || model.globalSettings.hasSeenSharingEnabledScreen }}'>
+        <uproxy-bubble on-closed='{{ closedSharing }}' hidden?='{{ (model.contacts.shareAccessContacts.onlineTrustedUproxy.length==0 && model.contacts.shareAccessContacts.offlineTrustedUproxy.length==0) || model.globalSettings.hasSeenSharingEnabledScreen }}'>
           <h3>Sharing Enabled</h3>
           <p>This icon means you're available for sharing access with friends you've offered access to.</p>
-        </uproxy-tip>
+        </uproxy-bubble>
 
         <div class='bottom fit'>
           <paper-tabs id='modeTabs' selected='{{ model.globalSettings.mode }}'>
@@ -194,13 +194,13 @@
         </div>
       </core-toolbar>
 
-      <uproxy-tip on-closed='{{ closedWelcome }}' hidden?='{{ model.globalSettings.hasSeenWelcome }}'>
+      <uproxy-bubble on-closed='{{ closedWelcome }}' hidden?='{{ model.globalSettings.hasSeenWelcome }}'>
         <h3>Welcome to uProxy!</h3>
         <p>
           To get started, choose "Get access" or "Share access" and then click
           on a friend to connect.
         </p>
-      </uproxy-tip>
+      </uproxy-bubble>
 
       <div id='roster-panel'>
         <uproxy-roster id='get-roster' class='roster'
