Move uproxy-bubble error styling to the polymer element
Using a uproxy-bubble for an error seems to be something that will
happen relatively frequently.  To account for that, this moves
consistent styling for those cases to the polymer element itself.

This also fixes a bug where the done button is incorrectly grey on
errors.

--- a/src/generic_ui/polymer/bubble.html
+++ b/src/generic_ui/polymer/bubble.html
@@ -65,6 +65,20 @@ uproxy-bubble::shadow #done {
     #done {
       background-color: #222;
     }
+
+    /* styling for any bubble with error class */
+    :host(.error) {
+      opacity: 1;
+    }
+    :host(.error) #box {
+      background: firebrick;
+    }
+    :host(.error) #arrow {
+      border-bottom-color: firebrick;
+    }
+    :host(.error) #done {
+      background: #CC2727;
+    }
     </style>
 
     <div id='container'>
