add faq content

--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -173,7 +173,7 @@
 
       <p id='moreInfo'>
         Your feedback and email address will be sent to uProxy.org. Your logs and email may include personally identifiable information.
-        <uproxy-faq-link anchor='feedbackLogs'>
+        <uproxy-faq-link anchor='logging'>
           <core-icon icon="help"></core-icon>
         </uproxy-faq-link>
       </p>
