--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -92,7 +92,7 @@
         </div>
       </div>
 
-      <uproxy-faq-link anchor='LearnMore'>
+      <uproxy-faq-link anchor='learnMore'>
         Learn more about uProxy
       </uproxy-faq-link>
     </div>
@@ -111,8 +111,8 @@
           We won't share your data or post publicly without your consent
         </p>
       </div>
-      <uproxy-faq-link anchor='Privacy'>
-        Learn more about privacy
+      <uproxy-faq-link anchor='social'>
+        Learn more about social networks
       </uproxy-faq-link>
     </div>
 
