--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -54,10 +54,48 @@
     .offline .nameRow {
       opacity: 0.5;
     }
+
+    /* below here is from old instance.html - TODO: remove what's not needed */
+    paper-button {
+      background: rgb(221, 221, 221);
+      color: rgb(112, 112, 112);
+      font-size: 1em;
+      margin-left: 0px;
+      padding-left: 1em;
+      padding-right: 1em;
+    }
+    .highlightedButton {
+      background: #009688;  /* dark green */
+      color: white;
+    }
+    p.preButtonText {
+      margin-top: 8px;
+      color: #888;
+    }
+    p.highlighted {
+      margin-top: 8px;
+      color: #009688;  /* dark green */
+    }
+    #description {
+      color: #333;
+    }
+    #getControls {
+      margin-top: 8px;
+    }
+    #shareControls {
+      margin-top: 8px;
+    }
+    p.askingText {
+      margin-bottom: 0;
+    }
+    img.clock {
+      vertical-align: bottom;
+    }
     </style>
 
     <div tabindex='-1' class='frame
         {{ contact.expanded ? "expanded" : "" }} {{ isOnline ? "online" : "offline" }}'>
+
       <div on-tap='{{ toggle}}' class='nameRow'>
         <img class='avatar' src='{{ contact.imageData }}' />
         <span class='name'>{{ contact.name }}</span>
@@ -65,17 +103,80 @@
             hidden?='{{ globalSettings.mode!=uProxy.Mode.GET || !contact.isSharingWithMe }}'>
         <img src='../icons/sharing_animated.gif' class='accessIcon'
             hidden?='{{ globalSettings.mode!=uProxy.Mode.SHARE || !contact.isGettingFromMe }}'>
-      </div>
+      </div> <!-- end of #nameRow -->
 
-      <div class='instances' hidden?='{{!contact.expanded}}'>
-        <template repeat='{{ i in contact.instances }}' vertical layout>
-          <uproxy-instance
-              user='{{ contact }}'
-              instance='{{ i }}'
-              network='{{contact.network}}'>
-          </uproxy-instance>
-        </template>
-      </div>
+      <div id='expandedControls' hidden?='{{ !contact.expanded }}'>
+
+        <div id='getControls' hidden?='{{globalSettings.mode!=uProxy.Mode.GET}}'>
+
+          <div class='instances' hidden?='{{ contact.offeringInstances.length == 0 }}'>
+            <template repeat='{{ instance in contact.offeringInstances }}' vertical layout>
+              <uproxy-instance
+                  user='{{ contact }}'
+                  instance='{{ instance }}'
+                  network='{{contact.network}}'>
+              </uproxy-instance>
+            </template>
+          </div> <!-- end of #instances -->
+
+          <!-- TODO: check the next 3 sections for correct permission -->
+          <div hidden?='{{ !contact.userConsent.localRequestsAccessFromRemote || (contact.offeringInstances.length > 0) }}'>
+            <p class='preButtonText askingText'><img src='../icons/clock.png' class='clock'> Asking for access</p>
+            <p class='preButtonText'>You will be able to get access when they accept.</p>
+            <paper-button raised on-tap='{{ cancelRequest }}'>Cancel Request</paper-button>
+          </div>
+
+          <div hidden?='{{ contact.userConsent.localRequestsAccessFromRemote || (contact.offeringInstances.length > 0) || contact.userConsent.ignoringRemoteUserOffer }}'>
+            <p class='preButtonText'>They've offered you access.</p>
+            <paper-button class='highlightedButton' raised on-tap='{{ request }}'>Accept Offer</paper-button>
+            <paper-button class='highlightedButton' raised on-tap='{{ ignoreOffer }}'>Decline</paper-button>
+          </div>
+
+          <!-- TOOD: verify this hidden rule again -->
+          <div hidden?='{{ !( !contact.userConsent.localRequestsAccessFromRemote && (contact.offeringInstances.length > 0) && contact.userConsent.ignoringRemoteUserOffer ) }}'>
+            <p class='preButtonText'>They've offered you access.</p>
+            <paper-button raised on-tap='{{ unignoreOffer }}'>Stop ignoring offers</paper-button>
+          </div>
+
+          <div hidden?='{{ !( !contact.userConsent.localRequestsAccessFromRemote && !(contact.offeringInstances.length > 0) ) }}'>
+            <paper-button raised class='highlightedButton' on-tap='{{ request }}'>
+              Ask for access
+            </paper-button>
+          </div>
+
+        </div> <!-- end of getControls -->
+
+
+
+        <div id='shareControls' hidden?='{{globalSettings.mode!=uProxy.Mode.SHARE}}'>
+          <div hidden?='{{ !( contact.userConsent.localGrantsAccessToRemote && contact.userConsent.remoteRequestsAccessFromLocal ) }}'>
+            <p class='preButtonText'>You've given them access.</p>
+            <paper-button raised on-tap='{{ cancelOffer }}'>Revoke Access</paper-button>
+          </div>
+
+          <div hidden?='{{ !( contact.userConsent.localGrantsAccessToRemote && !contact.userConsent.remoteRequestsAccessFromLocal ) }}'>
+            <paper-button raised on-tap='{{ cancelOffer }}'>Cancel Offer</paper-button>
+          </div>
+
+          <div hidden?='{{ !( !contact.userConsent.localGrantsAccessToRemote && contact.userConsent.remoteRequestsAccessFromLocal && !contact.userConsent.ignoringRemoteUserRequest ) }}'>
+            <p class='preButtonText'>They requested access through you.</p>
+            <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Grant</paper-button>
+            <paper-button raised class='highlightedButton' on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
+          </div>
+
+          <div hidden?='{{ !( !contact.userConsent.localGrantsAccessToRemote && contact.userConsent.remoteRequestsAccessFromLocal && contact.userConsent.ignoringRemoteUserRequest ) }}'>
+            <p class='preButtonText'>They requested access through you.</p>
+            <paper-button raised on-tap='{{ unignoreRequest }}'>Stop ignoring requests</paper-button>
+          </div>
+
+          <div hidden?='{{ !( !contact.userConsent.localGrantsAccessToRemote && !contact.userConsent.remoteRequestsAccessFromLocal ) }}'>
+            <p class='preButtonText'>You have not granted them access.</p>
+            <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Offer Access</paper-button>
+          </div>
+
+        </div> <!-- end of shareControls -->
+
+      </div> <!-- end of #expandedControls -->
 
     </div>
   </template>
