deleted more icons, update third_party copies

--- a/src/chrome/app/install-incomplete.html
+++ b/src/chrome/app/install-incomplete.html
@@ -4,7 +4,7 @@ ext-missing Polymer element. -->
 <html>
 
 <head>
-  <script src='lib/webcomponentsjs/webcomponents.js'></script>
+  <script src='lib/webcomponentsjs/webcomponents.min.js'></script>
 
   <link rel='import' href='polymer/vulcanized.html'>
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
