--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -75,8 +75,8 @@
     }
     </style>
 
-    <img src='../icons/arrow-left.png' on-tap='{{prev}}' class='prevArrow'
-        hidden?='{{SPLASH_STATES.INTRO==ui.splashState}}'>
+    <core-icon icon='arrow-back' on-tap='{{prev}}' class='prevArrow'
+        hidden?='{{SPLASH_STATES.INTRO==ui.splashState}}'></core-icon>
 
     <div id='intro1' hidden?='{{SPLASH_STATES.INTRO!==ui.splashState}}'>
       <div class='view'>
