--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -46,8 +46,7 @@
       width: 20px;
       height: 20px;
     }
-    .instances {
-      padding-top: 8px;
+    #expandedControls {
       margin-left: 52px; /* line up with right bound of contact picture */
       margin-right: 40px; /* line up with end of name div (before accessIcon) */
     }
@@ -69,27 +68,21 @@
       color: white;
     }
     p.preButtonText {
-      margin-top: 8px;
+      margin-top: 0;
       color: #888;
     }
     p.highlighted {
-      margin-top: 8px;
+      margin-top: 0;
       color: #009688;  /* dark green */
     }
     #description {
       color: #333;
     }
-    #getControls {
-      margin-top: 8px;
-    }
-    #shareControls {
-      margin-top: 8px;
-    }
-    p.askingText {
-      margin-bottom: 0;
-    }
     img.clock {
       vertical-align: bottom;
+    }
+    #getInstanceControls {
+      margin-bottom: 1em;
     }
     </style>
 
@@ -109,7 +102,11 @@
 
         <div id='getControls' hidden?='{{globalSettings.mode!=uProxy.Mode.GET}}'>
 
-          <div class='instances' hidden?='{{ contact.offeringInstances.length == 0 }}'>
+          <div id='getInstanceControls' hidden?='{{ contact.gettingConsentState != GettingConsentState.LOCAL_REQUESTED_REMOTE_GRANTED }}'>
+
+            <p class='highlighted'>
+              <img src='../icons/checkmark.png'> {{contact.name || contact.userId }} has granted you access
+            </p>
             <template repeat='{{ instance in contact.offeringInstances }}' vertical layout>
               <uproxy-instance
                   user='{{ contact }}'
@@ -117,28 +114,26 @@
                   network='{{contact.network}}'>
               </uproxy-instance>
             </template>
-          </div> <!-- end of #instances -->
+          </div>
 
-          <!-- TODO: check the next 3 sections for correct permission -->
-          <div hidden?='{{ !contact.userConsent.localRequestsAccessFromRemote || (contact.offeringInstances.length > 0) }}'>
-            <p class='preButtonText askingText'><img src='../icons/clock.png' class='clock'> Asking for access</p>
+          <div hidden?='{{ contact.gettingConsentState != GettingConsentState.LOCAL_REQUESTED_REMOTE_NO_ACTION }}'>
+            <p class='preButtonText'><img src='../icons/clock.png' class='clock'> Asking for access</p>
             <p class='preButtonText'>You will be able to get access when they accept.</p>
             <paper-button raised on-tap='{{ cancelRequest }}'>Cancel Request</paper-button>
           </div>
 
-          <div hidden?='{{ contact.userConsent.localRequestsAccessFromRemote || (contact.offeringInstances.length > 0) || contact.userConsent.ignoringRemoteUserOffer }}'>
+          <div hidden?='{{ contact.gettingConsentState != GettingConsentState.REMOTE_OFFERED_LOCAL_NO_ACTION }}'>
             <p class='preButtonText'>They've offered you access.</p>
             <paper-button class='highlightedButton' raised on-tap='{{ request }}'>Accept Offer</paper-button>
-            <paper-button class='highlightedButton' raised on-tap='{{ ignoreOffer }}'>Decline</paper-button>
+            <paper-button class='highlightedButton' raised on-tap='{{ ignoreOffer }}'>Ignore</paper-button>
           </div>
 
-          <!-- TOOD: verify this hidden rule again -->
-          <div hidden?='{{ !( !contact.userConsent.localRequestsAccessFromRemote && (contact.offeringInstances.length > 0) && contact.userConsent.ignoringRemoteUserOffer ) }}'>
+          <div hidden?='{{ contact.gettingConsentState != GettingConsentState.REMOTE_OFFERED_LOCAL_IGNORED }}'>
             <p class='preButtonText'>They've offered you access.</p>
             <paper-button raised on-tap='{{ unignoreOffer }}'>Stop ignoring offers</paper-button>
           </div>
 
-          <div hidden?='{{ !( !contact.userConsent.localRequestsAccessFromRemote && !(contact.offeringInstances.length > 0) ) }}'>
+          <div hidden?='{{ contact.gettingConsentState != GettingConsentState.NO_OFFER_OR_REQUEST }}'>
             <paper-button raised class='highlightedButton' on-tap='{{ request }}'>
               Ask for access
             </paper-button>
@@ -149,27 +144,28 @@
 
 
         <div id='shareControls' hidden?='{{globalSettings.mode!=uProxy.Mode.SHARE}}'>
-          <div hidden?='{{ !( contact.userConsent.localGrantsAccessToRemote && contact.userConsent.remoteRequestsAccessFromLocal ) }}'>
+
+          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.LOCAL_OFFERED_REMOTE_ACCEPTED }}'>
             <p class='preButtonText'>You've given them access.</p>
             <paper-button raised on-tap='{{ cancelOffer }}'>Revoke Access</paper-button>
           </div>
 
-          <div hidden?='{{ !( contact.userConsent.localGrantsAccessToRemote && !contact.userConsent.remoteRequestsAccessFromLocal ) }}'>
+          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.LOCAL_OFFERED_REMOTE_NO_ACTION }}'>
             <paper-button raised on-tap='{{ cancelOffer }}'>Cancel Offer</paper-button>
           </div>
 
-          <div hidden?='{{ !( !contact.userConsent.localGrantsAccessToRemote && contact.userConsent.remoteRequestsAccessFromLocal && !contact.userConsent.ignoringRemoteUserRequest ) }}'>
+          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.REMOTE_REQUESTED_LOCAL_NO_ACTION }}'>
             <p class='preButtonText'>They requested access through you.</p>
             <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Grant</paper-button>
             <paper-button raised class='highlightedButton' on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
           </div>
 
-          <div hidden?='{{ !( !contact.userConsent.localGrantsAccessToRemote && contact.userConsent.remoteRequestsAccessFromLocal && contact.userConsent.ignoringRemoteUserRequest ) }}'>
+          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.REMOTE_REQUESTED_LOCAL_IGNORED }}'>
             <p class='preButtonText'>They requested access through you.</p>
             <paper-button raised on-tap='{{ unignoreRequest }}'>Stop ignoring requests</paper-button>
           </div>
 
-          <div hidden?='{{ !( !contact.userConsent.localGrantsAccessToRemote && !contact.userConsent.remoteRequestsAccessFromLocal ) }}'>
+          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.NO_OFFER_OR_REQUEST }}'>
             <p class='preButtonText'>You have not granted them access.</p>
             <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Offer Access</paper-button>
           </div>
