--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -4,12 +4,6 @@
 <polymer-element name='uproxy-instance' attributes='user, instance, network'>
   <template>
     <style>
-    :host {
-      display: block;
-      padding-top: 8px;
-      padding-bottom: 8px;
-      border-top: 1px solid rgb(221, 221, 221);
-    }
     #wrapper.offline {
       opacity: 0.5;
     }
@@ -26,12 +20,8 @@
       color: white;
     }
     p.preButtonText {
-      margin-top: 8px;
+      margin-top: 0;
       color: #888;
-    }
-    p.highlighted {
-      margin-top: 8px;
-      color: #009688;  /* dark green */
     }
     #description {
       color: #333;
@@ -47,18 +37,15 @@
     <div id='wrapper' class='{{ instance.isOnline ? "online" : "offline" }}'
          hidden?='{{globalSettings.mode!=uProxy.Mode.GET}}'>
 
-      <div id='description' hidden?='{{ !instance.description }}'>
+      <p id='description' hidden?='{{ !instance.description }}'>
         {{ instance.description }}
-      </div>
+      </p>
 
       <!-- It is assumed that all uproxy-instances are taken from
          user.offeringInstances and are therefore giving us access -->
 
       <!-- not getting or trying to get access -->
       <div hidden?='{{ instance.localGettingFromRemote != GettingState.NONE }}'>
-        <p class='highlighted'>
-          <img src='../icons/checkmark.png'> {{user.name || user.userId }} has granted you access
-        </p>
         <paper-button class='highlightedButton' raised on-tap='{{ start }}'>
           Start getting access
         </paper-button>
