Change the behaviour of going back
Leaving the copy+paste view now terminates any connection that was in
progress at the time.  If a connection is in progress, we will ask the
user to confirm whether or not to close that connection.

--- a/src/generic_ui/polymer/copypaste.html
+++ b/src/generic_ui/polymer/copypaste.html
@@ -54,6 +54,9 @@
       color: #009688;
     }
     </style>
+
+    <core-signals on-core-signal-copypaste-back='{{ doBack }}'></core-signals>
+
     <div id='cptoolbar'>
       <div class='prevArrow {{ { disabled: ui.copyPasteGettingState === GettingState.GETTING_ACCESS || ui.copyPasteSharingState === SharingState.SHARING_ACCESS } | tokenList }}'>
         <core-icon icon="arrow-back" on-tap='{{prev}}'></core-icon>
@@ -103,10 +106,6 @@
           class='message' on-tap='{{ select }}'>https://www.uproxy.org/request/{{ ui.copyPasteGettingMessage }}</textarea>
 
         <span class='message-loading' hidden?='{{ ui.copyPasteGettingMessage.length }}'>Loading...</span>
-
-        <div>
-          <paper-button on-tap='{{ startGetting }}'>Get a new URL</paper-button>
-        </div>
 
         <p>
           To finish setting up the connection, your friend needs to click on the
