Use core-signal to start copy+paste, require user to start proxying
This has two major changes (really should be two separate commits, but
for once I'm being lazy about this).

First of all, we now use a core-signal to actually trigger switching to
copy+paste mode.  This means we can remove the really ugly functions at
the top of copypaste.ts since we pick up the core signal within the
polymer element.

Second, we no longer immediately start the copy+paste connection but
instead wait for the user to click a button confirming the start.

The pending endpoint (we have to actually establish the proxying
connection before we can tell the user about it) is stored in the
top-level UI object (we need to know about it even if the user closes
the window)

Fixes #1082

--- a/src/generic_ui/polymer/copypaste.html
+++ b/src/generic_ui/polymer/copypaste.html
@@ -56,9 +56,10 @@
     </style>
 
     <core-signals on-core-signal-copypaste-back='{{ doBack }}'></core-signals>
+    <core-signals on-core-signal-copypaste-init='{{ init }}'></core-signals>
 
     <div id='cptoolbar'>
-      <div class='prevArrow {{ { disabled: ui.copyPasteGettingState === GettingState.GETTING_ACCESS || ui.copyPasteSharingState === SharingState.SHARING_ACCESS } | tokenList }}'>
+      <div class='prevArrow {{ { disabled: (ui.copyPasteGettingState === GettingState.GETTING_ACCESS && ui.copyPastePendingEndpoint === null) || ui.copyPasteSharingState === SharingState.SHARING_ACCESS } | tokenList }}'>
         <core-icon icon="arrow-back" on-tap='{{prev}}'></core-icon>
       </div>
       <span hidden?='{{ GettingState.NONE === ui.copyPasteGettingState || SharingState.TRYING_TO_SHARE_ACCESS == ui.copyPasteSharingState }}'>
@@ -117,9 +118,22 @@
       <div class='connected' hidden?='{{ ui.copyPasteGettingState !== GettingState.GETTING_ACCESS }}'>
         <p>Success!  A one time connection has been established.</p>
 
-        <p>To stop getting access from your friend, click the button below.</p>
+        <p>
+          To
+          <span hidden?='{{ ui.copyPastePendingEndpoint === null}}'>start</span>
+          <span hidden?='{{ ui.copyPastePendingEndpoint !== null}}'>stop</span>
+          getting access from your friend, click the button below.
+        </p>
 
-        <paper-button raised class='stop' on-tap='{{ stopGetting }}'>Stop getting access</paper-button>
+        <paper-button raised on-tap='{{ startProxying }}'
+            hidden?='{{ ui.copyPastePendingEndpoint === null }}'>
+          Start getting access
+        </paper-button>
+
+        <paper-button raised class='stop' on-tap='{{ stopGetting }}'
+            hidden?='{{ ui.copyPastePendingEndpoint !== null }}'>
+          Stop getting access
+        </paper-button>
 
         <uproxy-bubble active='{{ ui.copyPasteError === UI.CopyPasteError.UNEXPECTED }}' on-closed='{{ dismissError }}'>
           <p>You are currently getting access.</p>
