UI tweaks to the proxying statusbar

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -98,23 +98,24 @@
         bottom: 0px;
       }
       .statusRow {
-        height: 3em;
-        background-color: #333;
+        height: 58px;
+        background-color: #283230;
       }
       .statusText {
-        color: white;
-        padding-left: 1em;
-        padding-right: 1em;
-        padding-top: 0.75em;
+        color: #fff;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 19px;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
+        font-size: 14px;
       }
       .statusText img {
         vertical-align: middle;
-        padding-right: 1em;
-        width: 20px;
-        height: 20px;
+        padding-right: 20px;
+        width: 19px;
+        height: 19px;
       }
       .clickable {
         cursor: pointer;
