Code review changes

--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -65,7 +65,7 @@
         </paper-button>
       </div>
 
-    </div> <!-- end of wraper -->
+    </div> <!-- end of wrapper -->
 
   </template>
   <script src='instance.js'></script>
