specify style type

--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -4,7 +4,7 @@
   <head>
     <title>uProxy FAQ</title>
     <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
-    <style>
+    <style type='text/css'>
       body {
         margin: 50px;
         font-family: Roboto, sans-serif;
