--- a/src/generic_ui/disconnected.html
+++ b/src/generic_ui/disconnected.html
@@ -7,8 +7,8 @@
       background-color: white;
     }
   </style>
-  <script src='scripts/dependencies.js'></script>
-  <script src='scripts/uproxy.js'></script>
+  <script src='lib/webcomponentsjs/webcomponents.min.js'></script>
+  <script src='scripts/disconnected.js'></script>
 
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
   <link rel='import' href='polymer/vulcanized.html'>
