--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -1,4 +1,6 @@
 <link rel='import' href='../lib/polymer/polymer.html'>
+<link rel='import' href='../lib/core-icons/core-icons.html'>
+<link rel='import' href='../lib/core-collapse/core-collapse.html'>
 <link rel='import' href='instance.html'>
 
 <polymer-element name='uproxy-contact' attributes='contact, isOnline'>
@@ -24,31 +26,40 @@
     }
     .nameRow {
       white-space: nowrap;
-      overflow: hidden;
       text-overflow: ellipsis;
-      margin-right: 40px; /* room for accessIcon */
+      margin: 18px 0px 0px 24px;
       cursor: pointer;
     }
+    .nameRow core-icon {
+      opacity: 0.6;
+      margin: 0px 18px 0px 0px;
+      float: right;
+    }
+    .nameRow:hover core-icon {
+      opacity: 1;
+    }
     .avatar {
-      width: 36px; height: 36px;
-      margin: 8px; border: none; border-radius: 50%;
+      width: 40px; height: 40px;
+      border: none; border-radius: 50%;
       background-color: #eee;
       vertical-align: middle;
+      box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.12);
     }
     .name {
       font-size: 16px;
+      color: rgba(0,0,0,0.87);
+      padding-left: 18px;
     }
     .accessIcon {
-      position: absolute;
-      right: 0;
-      margin-top: 1em; /* line up with text (hacky) */
-      padding-right: 15px;
+      padding-right: 18px;
       width: 20px;
       height: 20px;
     }
-    #expandedControls {
-      margin-left: 52px; /* line up with right bound of contact picture */
-      margin-right: 40px; /* line up with end of name div (before accessIcon) */
+    core-collapse {
+      margin-left: 80px; /* line up with left bound of contact name */
+      margin-right: 48px;
+      margin-top: 0px; /* line details closer to bottom of contact name */
+      color: rgba(0,0,0,0.54);
     }
     .offline .nameRow {
       opacity: 0.5;
@@ -57,119 +68,139 @@
       background: rgb(221, 221, 221);
       color: rgb(112, 112, 112);
       font-size: 1em;
-      margin-left: 0px;
+      margin: 14px 5px 5px 2px;
       padding-left: 1em;
       padding-right: 1em;
+    }
+    core-icon[icon=query-builder],
+    core-icon[icon=mail],
+    core-icon[icon=check] {
+      height: 16px;
+      width: 16px;
+      color: rgba(0,0,0,0.54);
+      margin-top: 2px;
+      margin-right: 2px;
+    }
+    core-icon[icon=check] {
+      color: #009688;
     }
     .highlightedButton {
       background: #009688;  /* dark green */
       color: white;
     }
+    p.preButtonDetailedText {
+      margin: 18px 0px 0px 0px;
+      font-size: 12px;
+      line-height: 20px;
+    }
     p.preButtonText {
-      margin-top: 0;
-      color: #888;
-    }
-    p.highlighted {
-      margin-top: 0;
-      color: #009688;  /* dark green */
-    }
-    img.clock {
-      vertical-align: bottom;
-    }
-    #getInstanceControls {
-      margin-bottom: 1em;
+      margin: 0;
+      font-size: 14px;
     }
     </style>
 
-    <div tabindex='-1' class='frame
-        {{ contact.expanded ? "expanded" : "" }} {{ isOnline ? "online" : "offline" }}'>
+    <div class='nameRow' on-click='{{ toggle }}' tabindex='-1'
+        class='frame {{ isOnline ? "online" : "offline" }}'
+        center horizontal layout>
+      <img class='avatar' src='{{ contact.imageData }}' />
+      <div flex class='name'>{{ contact.name }}</div>
+      <img src='../icons/getting_animated.gif' class='accessIcon'
+          hidden?='{{ globalSettings.mode!=uProxy.Mode.GET || !contact.isSharingWithMe }}'>
+      <img src='../icons/sharing_animated.gif' class='accessIcon'
+          hidden?='{{ globalSettings.mode!=uProxy.Mode.SHARE || !contact.isGettingFromMe }}'>
+      <core-icon icon="expand-more"
+        hidden?='{{ !(globalSettings.mode==uProxy.Mode.GET && !contact.getExpanded && !contact.isSharingWithMe) && !(globalSettings.mode==uProxy.Mode.SHARE && !contact.shareExpanded && !contact.isGettingFromMe) }}'>
+      </core-icon>
+      <core-icon icon="expand-less"
+        hidden?='{{ !(globalSettings.mode==uProxy.Mode.GET && contact.getExpanded && !contact.isSharingWithMe) && !(globalSettings.mode==uProxy.Mode.SHARE && contact.shareExpanded && !contact.isGettingFromMe) }}'>
+      </core-icon>
+    </div> <!-- end of #nameRow -->
 
-      <div on-tap='{{ toggle}}' class='nameRow'>
-        <img class='avatar' src='{{ contact.imageData }}' />
-        <span class='name'>{{ contact.name }}</span>
-        <img src='../icons/getting_animated.gif' class='accessIcon'
-            hidden?='{{ globalSettings.mode!=uProxy.Mode.GET || !contact.isSharingWithMe }}'>
-        <img src='../icons/sharing_animated.gif' class='accessIcon'
-            hidden?='{{ globalSettings.mode!=uProxy.Mode.SHARE || !contact.isGettingFromMe }}'>
-      </div> <!-- end of #nameRow -->
+    <core-collapse id='getControls' class='expandedControls'
+      hidden?='{{globalSettings.mode!=uProxy.Mode.GET}}'
+      opened='{{ contact.getExpanded }}'>
 
-      <div id='expandedControls' hidden?='{{ !contact.expanded }}'>
+      <div id='getInstanceControls' hidden?='{{ contact.gettingConsentState != GettingConsentState.LOCAL_REQUESTED_REMOTE_GRANTED }}'>
+        <div horizontal layout>
+          <core-icon icon='check'></core-icon>
+          <p class='preButtonText' flex>
+            {{contact.name || contact.userId }} has granted you access
+          </p>
+        </div>
+        <template repeat='{{ instance in contact.offeringInstances }}' vertical layout>
+          <uproxy-instance
+              user='{{ contact }}'
+              instance='{{ instance }}'
+              network='{{contact.network}}'>
+          </uproxy-instance>
+        </template>
+      </div>
 
-        <div id='getControls' hidden?='{{globalSettings.mode!=uProxy.Mode.GET}}'>
+      <div hidden?='{{ contact.gettingConsentState != GettingConsentState.LOCAL_REQUESTED_REMOTE_NO_ACTION }}'>
+        <div horizontal layout>
+          <core-icon icon='query-builder'></core-icon>
+          <p class='preButtonText' flex>
+            Asking for access
+          </p>
+        </div>
+        <p class='preButtonDetailedText'>You will be able to get access when {{ contact.name }} accepts.</p>
+        <paper-button raised on-tap='{{ cancelRequest }}'>Cancel Request</paper-button>
+      </div>
 
-          <div id='getInstanceControls' hidden?='{{ contact.gettingConsentState != GettingConsentState.LOCAL_REQUESTED_REMOTE_GRANTED }}'>
+      <div hidden?='{{ contact.gettingConsentState != GettingConsentState.REMOTE_OFFERED_LOCAL_NO_ACTION }}'>
+        <p class='preButtonText'>They've offered you access.</p>
+        <paper-button class='highlightedButton' raised on-tap='{{ request }}'>Accept Offer</paper-button>
+        <paper-button class='highlightedButton' raised on-tap='{{ ignoreOffer }}'>Ignore</paper-button>
+      </div>
 
-            <p class='highlighted'>
-              <img src='../icons/checkmark.png'> {{contact.name || contact.userId }} has granted you access
-            </p>
-            <template repeat='{{ instance in contact.offeringInstances }}' vertical layout>
-              <uproxy-instance
-                  user='{{ contact }}'
-                  instance='{{ instance }}'
-                  network='{{contact.network}}'>
-              </uproxy-instance>
-            </template>
-          </div>
+      <div hidden?='{{ contact.gettingConsentState != GettingConsentState.REMOTE_OFFERED_LOCAL_IGNORED }}'>
+        <p class='preButtonText'>They've offered you access.</p>
+        <paper-button raised on-tap='{{ unignoreOffer }}'>Stop ignoring offers</paper-button>
+      </div>
 
-          <div hidden?='{{ contact.gettingConsentState != GettingConsentState.LOCAL_REQUESTED_REMOTE_NO_ACTION }}'>
-            <p class='preButtonText'><img src='../icons/clock.png' class='clock'> Asking for access</p>
-            <p class='preButtonText'>You will be able to get access when they accept.</p>
-            <paper-button raised on-tap='{{ cancelRequest }}'>Cancel Request</paper-button>
-          </div>
+      <div hidden?='{{ contact.gettingConsentState != GettingConsentState.NO_OFFER_OR_REQUEST }}'>
+        <paper-button raised class='highlightedButton' on-tap='{{ request }}'>
+          Ask for access
+        </paper-button>
+      </div>
 
-          <div hidden?='{{ contact.gettingConsentState != GettingConsentState.REMOTE_OFFERED_LOCAL_NO_ACTION }}'>
-            <p class='preButtonText'>They've offered you access.</p>
-            <paper-button class='highlightedButton' raised on-tap='{{ request }}'>Accept Offer</paper-button>
-            <paper-button class='highlightedButton' raised on-tap='{{ ignoreOffer }}'>Ignore</paper-button>
-          </div>
+    </core-collapse> <!-- end of getControls -->
 
-          <div hidden?='{{ contact.gettingConsentState != GettingConsentState.REMOTE_OFFERED_LOCAL_IGNORED }}'>
-            <p class='preButtonText'>They've offered you access.</p>
-            <paper-button raised on-tap='{{ unignoreOffer }}'>Stop ignoring offers</paper-button>
-          </div>
+    <core-collapse id='shareControls' class='expandedControls'
+      hidden?='{{globalSettings.mode!=uProxy.Mode.SHARE}}'
+      opened='{{ contact.shareExpanded }}'>
 
-          <div hidden?='{{ contact.gettingConsentState != GettingConsentState.NO_OFFER_OR_REQUEST }}'>
-            <paper-button raised class='highlightedButton' on-tap='{{ request }}'>
-              Ask for access
-            </paper-button>
-          </div>
+      <div hidden?='{{ contact.sharingConsentState != SharingConsentState.LOCAL_OFFERED_REMOTE_ACCEPTED }}'>
+        <p class='preButtonText'>You've given them access.</p>
+        <paper-button raised on-tap='{{ cancelOffer }}'>Revoke Access</paper-button>
+      </div>
 
-        </div> <!-- end of getControls -->
+      <div hidden?='{{ contact.sharingConsentState != SharingConsentState.LOCAL_OFFERED_REMOTE_NO_ACTION }}'>
+        <paper-button raised on-tap='{{ cancelOffer }}'>Cancel Offer</paper-button>
+      </div>
 
+      <div hidden?='{{ contact.sharingConsentState != SharingConsentState.REMOTE_REQUESTED_LOCAL_NO_ACTION }}'>
+        <div horizontal layout>
+          <core-icon icon='mail'></core-icon>
+          <p class='preButtonText' flex>
+            {{ contact.name }} requests access from you.
+          </p>
+        </div>
+        <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Grant</paper-button>
+        <paper-button raised class='highlightedButton' on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
+      </div>
 
+      <div hidden?='{{ contact.sharingConsentState != SharingConsentState.REMOTE_REQUESTED_LOCAL_IGNORED }}'>
+        <p class='preButtonText'>They requested access through you.</p>
+        <paper-button raised on-tap='{{ unignoreRequest }}'>Stop ignoring requests</paper-button>
+      </div>
 
-        <div id='shareControls' hidden?='{{globalSettings.mode!=uProxy.Mode.SHARE}}'>
+      <div hidden?='{{ contact.sharingConsentState != SharingConsentState.NO_OFFER_OR_REQUEST }}'>
+        <p class='preButtonText'>You have not granted them access.</p>
+        <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Offer Access</paper-button>
+      </div>
+    </core-collapse> <!-- end of shareControls -->
 
-          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.LOCAL_OFFERED_REMOTE_ACCEPTED }}'>
-            <p class='preButtonText'>You've given them access.</p>
-            <paper-button raised on-tap='{{ cancelOffer }}'>Revoke Access</paper-button>
-          </div>
-
-          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.LOCAL_OFFERED_REMOTE_NO_ACTION }}'>
-            <paper-button raised on-tap='{{ cancelOffer }}'>Cancel Offer</paper-button>
-          </div>
-
-          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.REMOTE_REQUESTED_LOCAL_NO_ACTION }}'>
-            <p class='preButtonText'>They requested access through you.</p>
-            <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Grant</paper-button>
-            <paper-button raised class='highlightedButton' on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
-          </div>
-
-          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.REMOTE_REQUESTED_LOCAL_IGNORED }}'>
-            <p class='preButtonText'>They requested access through you.</p>
-            <paper-button raised on-tap='{{ unignoreRequest }}'>Stop ignoring requests</paper-button>
-          </div>
-
-          <div hidden?='{{ contact.sharingConsentState != SharingConsentState.NO_OFFER_OR_REQUEST }}'>
-            <p class='preButtonText'>You have not granted them access.</p>
-            <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Offer Access</paper-button>
-          </div>
-
-        </div> <!-- end of shareControls -->
-
-      </div> <!-- end of #expandedControls -->
-
-    </div>
   </template>
 
   <script src='contact.js'></script>
