--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -104,13 +104,17 @@
         center horizontal layout>
       <img class='avatar' src='{{ contact.imageData }}' />
       <div flex class='name'>{{ contact.name }}</div>
+      <!-- TODO: Simplify show/hide logic of getting/sharing/expand/collapse icons. E.g. Angular allowed if/else-like logic to select what is displayed. -->
       <img src='../icons/getting_animated.gif' class='accessIcon'
           hidden?='{{ globalSettings.mode!=uProxy.Mode.GET || !contact.isSharingWithMe }}'>
       <img src='../icons/sharing_animated.gif' class='accessIcon'
           hidden?='{{ globalSettings.mode!=uProxy.Mode.SHARE || !contact.isGettingFromMe }}'>
+      <!-- If you are sharing with or getting from a contact, the glowing sharing/getting icon will replace the expand/collapse chevron. -->
+      <!-- Show expand chevron in only two cases: when contact is collapsed in GET mode and you're not getting from them OR when contact is collapsed in SHARE mode and you're not sharing with them. -->
       <core-icon icon="expand-more"
         hidden?='{{ !(globalSettings.mode==uProxy.Mode.GET && !contact.getExpanded && !contact.isSharingWithMe) && !(globalSettings.mode==uProxy.Mode.SHARE && !contact.shareExpanded && !contact.isGettingFromMe) }}'>
       </core-icon>
+      <!-- Show collapse chevron in only two cases: when contact is expanded in GET mode and you're not getting from them OR when contact is expanded in SHARE mode and you're not sharing with them. -->
       <core-icon icon="expand-less"
         hidden?='{{ !(globalSettings.mode==uProxy.Mode.GET && contact.getExpanded && !contact.isSharingWithMe) && !(globalSettings.mode==uProxy.Mode.SHARE && contact.shareExpanded && !contact.isGettingFromMe) }}'>
       </core-icon>
